Fix ul bullets on Firefox and IE

--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,7 @@ Main Components
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
     display: none;
+    list-style-type: none;
 }
 
 .cd-vertical-nav a {
